# backend_endpoint

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  seed.py
app/: data.py  db.py  router.py  schemas.py  session.py  settings.py
app/cache/: __init__.py  redis_client.py
app/db/: __init__.py  db.py  models.py  repository.py
app/exceptions/: exceptions.py
app/worker/: __init__.py  celery_app.py  task.py
migrations/: env.py
migrations/versions/: 76eb2f62a008_create_products_table.py
tests/: locustfile.py
