[project]
name = "backend-endpoint"
version = "0.1.0"
description = "My FASTAPI endpoint"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "granian>=2.7.5",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "redis>=8.0.0",
    "sqlalchemy>=2.0.50",
]
